--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -26,6 +26,8 @@
 @import "components/editor/Editor_Dashboard";
 @import "components/forms/Forms_contact-site-form";
 @import "components/forms/User_Forms";
+@import "components/forms/mailchimp_block";
+@import "components/forms/mailchimp_popup";
 @import "components/store/Store_subscription";
 @import "components/store/siteseals";
 
