--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -5766,3 +5766,7 @@ body.node-type-subscription .node__content input[type="submit"] {
 #user-login {
   width: 75%;
 }
+#user-register-form .field-name-field-company-name,
+#user-register-form  .field-name-field-title {
+	display:none;
+}
