--- a/sites/all/themes/wttoc/css/wttoc.custom.css
+++ b/sites/all/themes/wttoc/css/wttoc.custom.css
@@ -4,3 +4,9 @@
 	margin-top:-45px;
 	margin-left:30px;
 }
+
+@media (min-width: 0) and (max-width: 320px) {
+	.password-strength {
+		float:none;
+	}	
+}
